--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html>
   
   <head>
+    <link type="text/css" rel="stylesheet" href="stylesheets/default.css">
     <title>
-      Site Title
+      Marcus A. Davis
     </title>
   
   </head>
 
-
+  <body>
   <header>
-    <h1>Site Name</h1>
-    <h2>tagline</h2>
-    <img src="#" alt="Banner image">
+    <h1>Marcus A. Davis</h1>
+    <span id="headme">Web Developer | Audio Engineer | Writer</span>
+    <p><img class="banner" src="imgs/justin-kern-flickr-cc.jpg" alt="Banner image" ></p>
 
-    <nav>
+    <span class="headerbar"><nav>
     	<a href="#">Home</a> <a href="#">About</a> <a href="#">Blog</a> <a href="#">Projects</a> <a href="#">Contact</a>
-    </nav>
+    </nav></span>
   
   </header>
 
-  <body>
+  
 
-   <section>
-     <table>
+   <section class="main">
+     <table class="maintable">
      	<tr>
      	  <td><a href="#">Content 1</a></td>
      	  <td><a href="#">Content 2</a></td>
@@ -31,7 +32,7 @@
      	</tr>
      	<tr>
      	  <td><a href="#"><p>Content text here</p></a></td>
-     	  <td><a href="#"><img src="#" alt="Content 2"></a></td>
+     	  <td><a href="#"><span ><img src="imgs/EA-Logo-redbg.png" alt="Content 2" class="downsize"></span></a></td>
      	  <td><a href="#"><p>Content text here</p></a></td>
      	</tr>
 
@@ -41,20 +42,37 @@
   </section>
   	
   
-     <aside>
-  		<a href="#">Home</a> <a href="#">Post 1</a> <a href="#">Post 2</a> <a href="#">Post 3</a> <a href="#">Post 4</a> <a href="#">Post 5</a> <a href="#">Post 6</a> <a href="#">Post 7</a>
+     <aside id="lefty">
+      <table class="leftnav">
+        <tr>
+  		  <td><a href="#">Home</a></td>
+        <tr>
+        <td><a href="#">Post 1</a></td>
+        <tr>
+        <td><a href="#">Post 2</a></td>
+        <tr>
+        <td><a href="#">Post 3</a></td>
+        <tr>
+        <td><a href="#">Post 4</a></td>
+        <tr>
+        <td><a href="#">Post 5</a></td>
+        <tr>
+        <td><a href="#">Post 6</a></td>
+        <tr>
+        <td><a href="#">Post 7</a></td>
+    </table>
   	</aside>
 
-  	<aside>
+  	<span class="righty">
   		<h3>Marcus A. Davis</h3>
-  		<img src="#" alt="Picture of Me">
-  	</aside>
+  		<img src="imgs/me-with-glasses.jpg" alt="Picture of Me">
+  	</span>
   
 
-  <hr>
+  <span class="footerline"><hr></span>
 
   	<footer>
-  		<a href="#">GitHub</a> | <a href="#">Twitter</a> | <a href="#">LinkedIn</a> | <a href="#">Résumé</a>
+  		<a href="#">GitHub</a> | <a href="#">Twitter</a> | <a href="#">LinkedIn</a> | <a href="#">R&eacute;sum&eacute;</a>
   	</footer>
   	
 
