Add projects page and remove background image

--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 
   
 
-  <body background="imgs/seamless_paper_texture.png">
-    <div class="background" ></div>
+  <body>
+    <div class="background"></div>
       <header>
         <h1><a href="index.html">Marcus A. Davis</a></h1>
         <nav>
@@ -19,21 +19,21 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="blog/index.html">Blog</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
             <li><a href="../contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
       <div id="banner">
         <div id="title">
-          <p>Technically Speaking</p>
+          <h2></h2>
         </div>
       </div>
 
     <!-- END HEADER -->
       <div id="main">
 
-      <div id="leftnav">
+      <!-- <div id="leftnav">
           <aside id="lefty">
           <ul>
           
@@ -49,7 +49,7 @@
           </aside>
 
        
-        </div> 
+        </div>  -->
 
         <section id="posts">
           <article id="singlecol">
