--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <div class="background" >
 
-    <body background="imgs/seamless_paper_texture.png">
+    <body>
 		<header>
 			<h1><a href="index.html">Marcus A. Davis</a></h1>
 			<nav>
@@ -17,14 +17,14 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="blog/index.html">Blog</a></li>
-					<li><a href="#">Projects</a></li>
+					<li><a href="projects/index.html">Projects</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div id="banner">
 			<div id="title">
-				<p>Web Developer | Audio Engineer | Writer</p>
+				<h2>Web Developer | Audio Engineer | Writer</h2>
 			</div>
 		</div>
 		<div id="main">
