Add Ruby v JavaScript blog post

--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,6 @@
               <li><a href="https://www.linkedin.com/in/marcusadavis1"><img src="imgs/linkedin.png" alt="linkedin"></a><li>
               <li>GitHub</li>
               <li><a href="https://github.com/marcus-a-davis/"><img src="imgs/github2.png" alt="github"></a><li>
-              <li>Twitter</li>
-              <li><a href="https://twitter.com/marcusthequiet"><img src="imgs/twitter.png" alt="twitter"></a><li>
               <li>Email me</li>
               <li><a href="mailto:marcus.a.davis24@gmail.com"><img src="imgs/mail.png" alt="email"></a><li>
             </ul>
@@ -80,7 +78,7 @@
     <span class="footerline"><hr></span>
 
       
-        <p><a href="https://github.com/marcus-a-davis/"><img src="imgs/github48.png" alt="GitHub"></a><a href="https://twitter.com/marcusthequiet"><img src="imgs/twitter48.png" alt="Twitter"></a><a href="https://www.linkedin.com/in/marcusadavis1"><img src="imgs/linkedin48.png" alt="LinkedIn"></a><a href="#"><img src="imgs/resume48.png" alt="R&eacute;sum&eacute;"></a></p>
+        <p><a href="https://github.com/marcus-a-davis/"><img src="../imgs/github48.png" alt="GitHub"></a><a href="https://www.linkedin.com/in/marcusadavis1"><img src="../imgs/linkedin48.png" alt="LinkedIn"></a><a href="#"><img src="../imgs/resume48.png" alt="R&eacute;sum&eacute;"></a></p>
       
   </div>
 
