--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <span class="footerline"><hr></span>
 
       
-        <p><a href="https://github.com/marcus-a-davis/"><img src="imgs/github48.png" alt="GitHub"></a><a href="https://twitter.com/marcusthequiet"><img src="imgs/twitter48.png" alt="Twitter"></a><a href="https://www.linkedin.com/in/marcusadavis1"><img src="imgs/linkedin48.png" alt="LinkedIn"></a><a href="#"><img src="imgs/resume48.png" alt="R&eacute;sum&eacute;"></a></p>
+        <p><a href="https://github.com/marcus-a-davis/"><img src="../imgs/github48.png" alt="GitHub"></a><a href="https://www.linkedin.com/in/marcusadavis1"><img src="../imgs/linkedin48.png" alt="LinkedIn"></a><a href="#"><img src="../imgs/resume48.png" alt="R&eacute;sum&eacute;"></a></p>
       
   </div>
 </html>
